# TPMeSh

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
TPMeSh/: __init__.py  mesh_implicit.py  mesh_implicit_periodic.py  mesh_implicit_surface.py  mesh_tpms.py  utils.py  visualize.py
cmake/recipes/: eigen.cmake  nanobind.cmake
examples/: README.md  cylinder.py  interesting_combos.py  large_examples.py  primitives.sh  spatially_varying_tpms.py  square_wave.py
src/: CMakeLists.txt  bindings.cpp  fourier_tpms.cpp  fourier_tpms.hpp  implicit.hpp  implicit_shell.hpp  interpolated_tpms.cpp  interpolated_tpms.hpp  spatially_varying_tpms.cpp  spatially_varying_tpms.hpp  tpms.hpp  tpms_gradient.hpp
